Highlight logic cleanup and overflow bug fix

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -94,9 +94,7 @@
   margin: 1px;
   cursor: pointer;
   font-size: 11px;
-  min-height: 30px;
   word-wrap: break-word; /* Ensure long words do not overflow */
-  /* max-height: 50px; */
 }
 
 .result-item-container:hover {
@@ -125,7 +123,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto; /* Makes it scrollable */
-  max-height: 300px; /* Limits the height of the results container */
+  max-height: 300px; 
 }
 
 .selected-item {
